--- a/index.html
+++ b/index.html
@@ -6,8 +6,32 @@
     <title>Emergency Hotlines</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
-<body>
-    
+<body class="bg-[#f5fff6] mx-auto">
+    <header class="flex justify-between items-center my-3 mx-4">
+        <div class="flex justify-center items-center gap-1">
+            <img class="w-10" src="./assets/logo.png" alt="">
+            <h3 class="font-bold text-[#006747]">Emergency <br>Service</h3>
+        </div>
+        <div class="flex gap-1">
+            <div class="flex justify-center items-center gap-1 bg-green-100 w-16 h-8 rounded-2xl p-2">
+                <p class="font-bold">0</p>❤️
+            </div>
+            <div class="flex justify-center items-center gap-1 bg-green-100 w-16 h-8 rounded-2xl p-2">
+                <p class="font-bold">200</p>🪙
+            </div>
+            <div class="flex justify-center items-center gap-1 bg-green-500 w-16 h-8 rounded-2xl text-white p-2">
+                <p class="font-semibold"><span class="mr-1">2</span>copy</p>
+            </div>          
+        </div>
+    </header>
+    <div class="bg-[#013223] text-center">
+            <div class="flex justify-center items-center pt-5"><img class="w-16" src="./assets/logo-dark.png" alt=""></div>
+            <h2 class="text-white font-bold text-lg">Emergency Service Directory</h2>
+            <h5 class="text-white font-semibold text-xs pb-5">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</h5>
+    </div>
 </body>
 </html>
