--- a/index.html
+++ b/index.html
@@ -9,29 +9,176 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/6425ba8394.js" crossorigin="anonymous"></script>
 </head>
 <body class="bg-[#f5fff6] mx-auto">
-    <header class="flex justify-between items-center my-3 mx-4">
+    <!-- header section -->
+    <header class="flex justify-between items-center my-3 mx-4 md:my-2 md:mx-4">
         <div class="flex justify-center items-center gap-1">
-            <img class="w-10" src="./assets/logo.png" alt="">
-            <h3 class="font-bold text-[#006747]">Emergency <br>Service</h3>
+            <img class="w-10 md:w-7" src="./assets/logo.png" alt="">
+            <h3 class="font-bold text-[#006747] text-xs">Emergency <br>Service</h3>
         </div>
         <div class="flex gap-1">
-            <div class="flex justify-center items-center gap-1 bg-green-100 w-16 h-8 rounded-2xl p-2">
-                <p class="font-bold">0</p>❤️
+            <div class="flex justify-center items-center gap-1 bg-green-100 w-16 h-8 rounded-2xl p-2 md:w-12 md:h-6">
+                <p class="font-bold text-xs">0</p>❤️
             </div>
-            <div class="flex justify-center items-center gap-1 bg-green-100 w-16 h-8 rounded-2xl p-2">
-                <p class="font-bold">200</p>🪙
+            <div class="flex justify-center items-center gap-1 bg-green-100 w-16 h-8 rounded-2xl p-2 md:w-14 md:h-6">
+                <p class="font-bold text-xs">200</p>🪙
             </div>
-            <div class="flex justify-center items-center gap-1 bg-green-500 w-16 h-8 rounded-2xl text-white p-2">
-                <p class="font-semibold"><span class="mr-1">2</span>copy</p>
+            <div class="flex justify-center items-center gap-1 bg-green-500 w-18 h-8 rounded-2xl text-white p-2 md:w-14 md:h-6">
+                <p class="font-semibold text-center text-xs"><span class="mr-1">2</span>COPY</p>
             </div>          
         </div>
     </header>
-    <div class="bg-[#013223] text-center">
+   <main>
+    <!-- banner section -->
+     <div class="bg-[#013223] text-center">
             <div class="flex justify-center items-center pt-5"><img class="w-16" src="./assets/logo-dark.png" alt=""></div>
             <h2 class="text-white font-bold text-lg">Emergency Service Directory</h2>
             <h5 class="text-white font-semibold text-xs pb-5">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</h5>
     </div>
+    <!-- card and cart section -->
+    <section  class="w-11/12 mx-auto py-5 grid grid-cols-12 gap-5">
+        <section class="col-span-9">
+            <section class=" md:gap-1 md:flex md:flex-row">
+             <div class="p-5 bg-base-100 shadow-sm md:w-1/3 mb-2">
+                  <div class="flex justify-between items-center mb-2">
+                    <img class="w-8" src="./assets/emergency.png" alt="">
+                    <p>🤍</p>
+                  </div>
+                   <h3 class="font-bold">National Emergency Number</h3>
+                   <p class="text-gray-500 text-xs">National Emergency</p>
+                   <h2 class="font-bold mt-1 mb-1 text-xl">999</h2>
+                   <p class="bg-gray-200 w-11 rounded-xl text-center text-xs mb-2">All</p>
+                  <div class="flex justify-evenly gap-2">
+                    <button class="btn w-1/2 rounded-xl md:h-8 md:mt-2"><i class="fa-regular fa-copy"></i>Copy</button>
+                    <button class="btn w-1/2 bg-green-500 text-white rounded-xl md:h-8 md:mt-2"><i class="fa-solid fa-phone"></i>Call</button>
+                 </div>
+            </div>
+            <div class="p-5 bg-base-100 shadow-sm md:w-1/3 mb-2">
+                <div class="flex justify-between items-center mb-2">
+                    <img class="w-8" src="./assets/police.png" alt="">
+                    <p>🤍</p>
+                </div>
+                <h3 class="font-bold">Police Emergency Number</h3>
+                <p class="text-gray-500 text-xs">Police Emergency</p>
+                <h2 class="font-bold mt-1 mb-1 text-xl">999</h2>
+                <p class="bg-gray-200 w-11 rounded-xl text-center text-xs mb-2">Police</p>
+                 <div class="flex justify-evenly gap-2">
+                    <button class="btn w-1/2 rounded-xl md:h-8 md:mt-2"><i class="fa-regular fa-copy"></i>Copy</button>
+                    <button class="btn w-1/2 bg-green-500 text-white rounded-xl md:h-8 md:mt-2"><i class="fa-solid fa-phone"></i>Call</button>
+                 </div>
+            </div>
+            <div class="p-5 bg-base-100 shadow-sm md:w-1/3 mb-2">
+                <div class="flex justify-between items-center mb-2">
+                    <img class="w-8" src="./assets/fire-service.png" alt="">
+                    <p>🤍</p>
+                </div>
+                <h3 class="font-bold">National Fire Service Number</h3>
+                <p class="text-gray-500 text-xs">Fire Emergency</p>
+                <h2 class="font-bold mt-1 mb-1 text-xl">999</h2>
+                <p class="bg-gray-200 w-11 rounded-xl text-center text-xs mb-2">Fire</p>
+                 <div class="flex justify-evenly gap-2">
+                    <button class="btn w-1/2 rounded-xl md:h-8 md:mt-2"><i class="fa-regular fa-copy "></i>Copy</button>
+                    <button class="btn w-1/2 bg-green-500 text-white rounded-xl md:h-8 md:mt-2"><i class="fa-solid fa-phone"></i>Call</button>
+                 </div>
+            </div>                                       
+            </section>             
+            <section class=" md:gap-1 md:flex md:flex-row">
+            <div class="p-5 bg-base-100 shadow-sm md:w-1/3 mb-2">
+                <div class="flex justify-between items-center mb-2">
+                    <img class="w-8" src="./assets/ambulance.png" alt="">
+                    <p>🤍</p>
+                </div>
+                <h3 class="font-bold">Ambulance Service Number</h3>
+                <p class="text-gray-500 text-xs">Health Emergency</p>
+                <h2 class="font-bold mt-1 mb-1 text-xl">194-999</h2>
+                <p class="bg-gray-200 w-11 rounded-xl text-center text-xs mb-2">All</p>
+                 <div class="flex justify-evenly gap-2">
+                    <button class="btn w-1/2 rounded-xl md:h-8 md:mt-2"><i class="fa-regular fa-copy"></i>Copy</button>
+                    <button class="btn w-1/2 bg-green-500 text-white rounded-xl md:h-8 md:mt-2"><i class="fa-solid fa-phone"></i>Call</button>
+                 </div>
+            </div>
+            <div class="p-5 bg-base-100 shadow-sm md:w-1/3 mb-2">
+                <div class="flex justify-between items-center mb-2">
+                    <img class="w-8" src="./assets/police.png" alt="">
+                    <p>🤍</p>
+                </div>
+                <h3 class="font-bold">Anti-Corruption Helpline</h3>
+                <p class="text-gray-500 text-xs">National Emergency</p>
+                <h2 class="font-bold mt-1 mb-1 text-xl">109</h2>
+                <p class="bg-gray-200 w-11 rounded-xl text-center text-xs mb-2">All</p>
+                 <div class="flex justify-evenly gap-2">
+                    <button class="btn w-1/2 rounded-xl md:h-8 md:mt-2"><i class="fa-regular fa-copy"></i>Copy</button>
+                    <button class="btn w-1/2 bg-green-500 text-white rounded-xl md:h-8 md:mt-2"><i class="fa-solid fa-phone"></i>Call</button>
+                 </div>
+            </div>
+            <div class="p-5 bg-base-100 shadow-sm md:w-1/3 mb-2">
+                <div class="flex justify-between items-center mb-2">
+                    <img class="w-8" src="./assets/emergency.png" alt="">
+                    <p>🤍</p>
+                </div>
+                <h3 class="font-bold">Women & Child Helpline</h3>
+                <p class="text-gray-500 text-xs">National Emergency</p>
+                <h2 class="font-bold mt-1 mb-1 text-xl">106</h2>
+                <p class="bg-gray-200 w-11 rounded-xl text-center text-xs mb-2">All</p>
+                 <div class="flex justify-evenly gap-2">
+                    <button class="btn w-1/2 rounded-xl md:h-8 md:mt-2"><i class="fa-regular fa-copy "></i>Copy</button>
+                    <button class="btn w-1/2 bg-green-500 text-white rounded-xl md:h-8 md:mt-2"><i class="fa-solid fa-phone"></i>Call</button>
+                 </div>
+            </div>                                        
+            </section>
+            <section class=" md:gap-1 md:flex md:flex-row">
+            <div class="p-5 bg-base-100 shadow-sm md:w-1/3 mb-2 md:mb-0">
+                <div class="flex justify-between items-center mb-2">
+                    <img class="w-8" src="./assets/Bangladesh-Railway.png" alt="">
+                    <p>🤍</p>
+                </div>
+                <h3 class="font-bold">Railway Service Number</h3>
+                <p class="text-gray-500 text-xs">Bangladesh-Railway</p>
+                <h2 class="font-bold mt-1 mb-1 text-xl">163</h2>
+                <p class="bg-gray-200 w-11 rounded-xl text-center text-xsmb-2">All</p>
+                 <div class="flex justify-evenly gap-2">
+                    <button class="btn w-1/2 rounded-xl md:h-8 md:mt-2"><i class="fa-regular fa-copy"></i>Copy</button>
+                    <button class="btn w-1/2 bg-green-500 text-white rounded-xl md:h-8 md:mt-2"><i class="fa-solid fa-phone"></i>Call</button>
+                 </div>
+            </div>
+            <div class="p-5 bg-base-100 shadow-sm md:w-1/3 mb-2 md:mb-0">
+                <div class="flex justify-between items-center mb-2">
+                    <img class="w-8" src="./assets/brac.png" alt="">
+                    <p>🤍</p>
+                </div>
+                <h3 class="font-bold">BRAC Service Helpline</h3>
+                <p class="text-gray-500 text-xs">Brac Helpline</p>
+                <h2 class="font-bold mt-1 mb-1 text-xl">16445</h2>
+                <p class="bg-gray-200 w-11 rounded-xl text-center text-xs mb-2">All</p>
+                 <div class="flex justify-evenly gap-2">
+                    <button class="btn w-1/2 rounded-xl md:h-8 md:mt-2"><i class="fa-regular fa-copy"></i>Copy</button>
+                    <button class="btn w-1/2 bg-green-500 text-white rounded-xl md:h-8 md:mt-2"><i class="fa-solid fa-phone"></i>Call</button>
+                 </div>
+            </div>
+            <div class="p-5 bg-base-100 shadow-sm md:w-1/3 ">
+                <div class="flex justify-between items-center mb-2">
+                    <img class="w-8" src="./assets/emergency.png" alt="">
+                    <p>🤍</p>
+                </div>
+                <h3 class="font-bold">Electricity Service Hotline</h3>
+                <p class="text-gray-500 text-xs">National Emergency</p>
+                <h2 class="font-bold mt-1 mb-1 text-xl">16216</h2>
+                <p class="bg-gray-200 w-11 rounded-xl text-center text-xs mb-2">All</p>
+                 <div class="flex justify-evenly gap-2">
+                    <button class="btn w-1/2 rounded-xl md:h-8 md:mt-2"><i class="fa-regular fa-copy "></i>Copy</button>
+                    <button class="btn w-1/2 bg-green-500 text-white rounded-xl md:h-8 md:mt-2"><i class="fa-solid fa-phone"></i>Call</button>
+                 </div>
+            </div>                                        
+            </section>
+        </section>
+        <!-- call history -->
+        <aside class="bg-white rounded-xl shadow-sm col-span-3 md:flex md:justify-between md:flex-row md:flex-row-reverse md:px-2">
+            <button class="btn btn-sm bg-green-500 text-white rounded-xl mt-2 text-xs ml-1 md:w-18 md:h-7"><i class="fa-regular fa-clock"></i>Clear</button>
+            <h3 class="font-semibold md:font-bold text-xs pt-4"><i class="fa-regular fa-clock"></i> Call History</h3>
+        </aside>
+    </section>
+   </main>
 </body>
 </html>
