--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                <button id="clear-btn" class="w-12 h-6 bg-green-700 rounded-xl text-white text-xs mt-3 ml-4 md:mr-2">Clear</button>
             </div>
             <div id="call-history" >
-               <ul class="mt-2 text-[6px] font-bold ml-4 mt-3"></ul>
+               <ul class="mt-2 text-xs ml-3 md:text-[10px] font-bold md:text-center mt-3"></ul>
             </div>          
         </aside>
     </section>
