last and final commit

--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
                  <h3 class="font-bold text-xs text-center pt-3 md:pl-3 md:text-lg"><i class="fa-regular fa-clock"></i>  Call History</h3>
                  <button id="clear-btn" class="bg-green-700 w-12 h-6 text-white text-xs rounded-xl ml-2 mt-2 md:mr-3 md:font-semibold md:w-16 md:h-8">Clear</button>
             </div>
-            <div id="call-history" >
-               <ul class="mt-2 text-[6px] ml-2 md:text-[10px] font-bold md:text-center mt-3"></ul>
+            <div id="call-history" class="" >
+               <ul class="mt-2 text-[6px] p-1 md:text-[10px] font-bold md:text-center md:mx-5 md:mt-4"></ul>
             </div>          
         </aside>
     </section>
