--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
      <div class="bg-[linear-gradient(90deg,#013223,#006747,#013223)] text-center md:py-3">
             <div class="flex justify-center items-center pt-5"><img class="w-16" src="./assets/logo-dark.png" alt=""></div>
             <h2 class="text-white font-bold text-lg">Emergency Service Directory</h2>
-            <h5 class="text-white font-semibold text-xs pb-5">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</h5>
+            <h5 class="text-white font-semibold px-3 text-xs pb-5">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</h5>
     </div>
     <!-- card and cart section -->
-    <section  class="w-11/12 mx-auto py-5 grid grid-cols-12 gap-5">
-        <section class="col-span-9">
+    <section  class="w-11/12 mx-auto py-5 flex flex-col flex-col-reverse md:flex-row md:justify-evenly gap-5">
+        <section class="m:w-250">
             <section class=" md:gap-1 md:flex md:flex-row">
-             <div class="card p-5 bg-base-100 shadow-sm md:w-1/3 mb-2">
+             <div class="card p-5 bg-base-100 shadow-sm md:w-85 mb-2">
                   <div class="flex justify-between items-center mb-2">
                     <img class="w-8" src="./assets/emergency.png" alt="">
                     <p class="heart"><i class="fa-regular fa-heart"></i></p>
@@ -55,7 +55,7 @@
                     <button class="btn w-1/2 bg-green-600 text-white rounded-xl md:h-8 md:mt-2 call-btn"><i class="fa-solid fa-phone"></i>Call</button>
                  </div>
             </div>
-            <div class="card p-5 bg-base-100 shadow-sm md:w-1/3 mb-2">
+            <div class="card p-5 bg-base-100 shadow-sm md:w-85 mb-2">
                 <div class="flex justify-between items-center mb-2">
                     <img class="w-8" src="./assets/police.png" alt="">
                     <p class="heart"><i class="fa-regular fa-heart"></i></p>
@@ -69,7 +69,7 @@
                     <button class="btn w-1/2 bg-green-600 text-white rounded-xl md:h-8 md:mt-2 call-btn"><i class="fa-solid fa-phone"></i>Call</button>
                  </div>
             </div>
-            <div class="card p-5 bg-base-100 shadow-sm md:w-1/3 mb-2">
+            <div class="card p-5 bg-base-100 shadow-sm md:w-85 mb-2">
                 <div class="flex justify-between items-center mb-2">
                     <img class="w-8" src="./assets/fire-service.png" alt="">
                     <p class="heart"><i class="fa-regular fa-heart"></i></p>
@@ -174,13 +174,13 @@
             </section>
         </section>
         <!-- call history -->
-        <aside  class="bg-white rounded-xl shadow-sm col-span-3">
-            <div class="md:flex md:justify-between md:items-center">
-                 <h3 class="font-bold text-xs text-center pt-3 md:pl-3 md:text-lg"><i class="fa-regular fa-clock"></i>  Call History</h3>
-                 <button id="clear-btn" class="bg-green-700 w-12 h-6 text-white text-xs rounded-xl ml-2 mt-2 md:mr-3 md:font-semibold md:w-16 md:h-8">Clear</button>
+        <aside  class="bg-white rounded-xl shadow-sm md:w-85 ">
+            <div class="flex justify-between items-center mx-5">
+                 <h3 class="font-bold text-xs text-center pt-3 md:pl-2 md:text-lg"><i class="fa-regular fa-clock"></i>  Call History</h3>
+                 <button id="clear-btn" class="bg-green-700 w-14 h-6 text-white text-xs rounded-xl  mt-2 md:mt-3 md:mr-2 md:font-semibold md:w-16 md:h-8">Clear</button>
             </div>
             <div id="call-history" class="" >
-               <ul class="mt-2 text-[6px] p-1 md:text-[10px] font-bold md:text-center md:mx-5 md:mt-4"></ul>
+               <ul class="mt-2 text-[10px] p-1 md:text-[10px] font-bold md:text-center mx-5 md:mt-4"></ul>
             </div>          
         </aside>
     </section>
