--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <aside  class="bg-white rounded-xl shadow-sm md:w-85 ">
             <div class="flex justify-between items-center mx-5">
                  <h3 class="font-bold text-xs text-center pt-3 md:pl-2 md:text-lg"><i class="fa-regular fa-clock"></i>  Call History</h3>
-                 <button id="clear-btn" class="bg-green-700 w-14 h-6 text-white text-xs rounded-xl  mt-2 md:mt-3 md:mr-2 md:font-semibold md:w-16 md:h-8">Clear</button>
+                 <button id="clear-btn" class="bg-green-700 w-14 h-6 text-white text-xs rounded-xl mt-3 md:mr-2 md:font-semibold md:w-16 md:h-8">Clear</button>
             </div>
             <div id="call-history" class="" >
                <ul class="mt-2 text-[10px] p-1 md:text-[10px] font-bold md:text-center mx-5 md:mt-4"></ul>
